feat: :sparkles: Added admin functionality to create new users (hosts and customers)
